--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bOWNER_ID = "1791446058"                               # Require restart after changing it while bot running
-TELEGRAM_API = "7784110"                           # Require restart after changing it while bot running
-TELEGRAM_HASH = "f81b6478f985c1283fa8c4847d1860ec"                          # Require restart after changing it while bot running
+BOT_TOKEN = "2130207071:AAGr4xacRA-nM2wfv33dhxQx5cAyahcJOF8"                              # Require restart after changing it while bot running
+OWNER_ID = "775874858"                               # Require restart after changing it while bOWNER_ID = "1791446058"                               # Require restart after changing it while bot running
+TELEGRAM_API = "7725784"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "fc5289302ee534813ceaedb9087c862e"                          # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bSUDO_USERS = "6113815320"                             # Require restart after changing it while bot running
 STATUS_LIMIT = "2"
